--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 logging.level.org.springframework = info
 server.port = 8181
 management.endpoints.web.exposure.include=*
+
+# Authentication
+spring.security.user.name=sora
+spring.security.user.password=roxas
