implements h2 database with JpaRepository, adds CRUD operations for users posts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ management.endpoints.web.exposure.include=*
 # Authentication
 spring.security.user.name=sora
 spring.security.user.password=roxas
+
+# H2 Database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
